# OTA-Vehicle_Mobile_Gateway

./: .gitignore  BUILD_AND_TEST.md  CMakeLists.txt  INSTALL_DEPENDENCIES.md  README.md  WSL_BUILD_GUIDE.md  config.json  hi.txt  http_client.cpp  http_client.hpp  install_dependencies.sh  install_wsl.sh  main.cpp  mqtt_client.cpp  mqtt_client.hpp  test_api.sh
include/: config_manager.hpp  doip_client.hpp  http_client.hpp  mqtt_client.hpp  ota_manager.hpp  partition_manager.hpp  readiness_manager.hpp  system_manager.hpp  vci_collector.hpp  vehicle_package.hpp  vehicle_state.hpp  zone_package.hpp
src/app/: config_manager.cpp  system_manager.cpp  vehicle_state.cpp
src/doip/: doip_client.cpp
src/http/: http_client.cpp
src/mqtt/: mqtt_client.cpp
src/ota/: ota_manager.cpp  ota_manager_vehicle.cpp  partition_manager.cpp
src/package/: vehicle_package_parser.cpp  zone_package_parser.cpp
src/readiness/: readiness_manager.cpp
src/vci/: vci_collector.cpp
test/: README.md  build_and_test.bat  build_and_test.sh  test_config.py  test_package_parser.py
tools/: vehicle_package_simulator.py
